[package]
name = "yew-app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18"
wasm-bindgen = "0.2.76"
fontdue = "0.5.2"
gif = "0.11.2"
js-sys = "0.3.53"
byteorder = "1.4.3"
gloo-file = "0.1.0"

[dependencies.web-sys]
features = ["Blob", "Url"]
version = "0.3.53"

